--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,10 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
-        ]
+        ],
+		"post-install-cmd":[
+			"deploy.bat"
+		]
     },
     "config": {
         "preferred-install": "dist",
