--- a/public/web.config
+++ b/public/web.config
@@ -19,5 +19,10 @@
         </rule>
       </rules>
     </rewrite>
+	 <httpProtocol>
+            <customHeaders>
+                <add name="Access-Control-Allow-Methods" value="POST,GET,OPTIONS,DELETE,PUT,PATCH" />
+            </customHeaders>
+		</httpProtocol>
   </system.webServer>
 </configuration>
