--- a/public/web.config
+++ b/public/web.config
@@ -29,9 +29,9 @@
             </rules>
         </rewrite>
          <handlers>
-         <!--   <remove name="OPTIONSVerbHandler" />
+         <remove name="OPTIONSVerbHandler" />
             <remove name="PHP56_via_FastCGI" />
             <add name="PHP56_via_FastCGI" path="*.php" verb="GET,HEAD,POST,PUT,DELETE,OPTIONS" modules="FastCgiModule" scriptProcessor="D:\Program Files (x86)\PHP\v5.6\php-cgi.exe" resourceType="Either" />
-        --></handlers>
+        </handlers>
     </system.webServer>
 </configuration>
